--- a/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn.rpt.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn.rpt.html
@@ -55,14 +55,14 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\centerctrl.v<br>
-F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\gowin_prom\ascii_pROM.v<br>
-F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\gowin_rpll\gowin_rpll.v<br>
-F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\lcd_init.v<br>
-F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\lcd_show_char.v<br>
-F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\lcd_write.v<br>
-F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\show_string_number_ctrl.v<br>
-F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<br>
+<td>D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\centerctrl.v<br>
+D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\gowin_prom\ascii_pROM.v<br>
+D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\lcd_init.v<br>
+D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\lcd_show_char.v<br>
+D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\lcd_write.v<br>
+D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\show_string_number_ctrl.v<br>
+D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<br>
+D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\gowin_rpll\gowin_rpll.v<br>
 </td>
 </tr>
 <tr>
@@ -83,7 +83,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon May 13 15:07:28 2024
+<td>Fri May 17 05:19:38 2024
 </td>
 </tr>
 <tr>
@@ -99,11 +99,11 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 </tr>
 <tr>
 <td class="label">Synthesis Process</td>
-<td>Running parser:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.156s, Elapsed time = 0h 0m 0.165s, Peak memory usage = 109.430MB<br/>Running netlist conversion:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 0MB<br/>Running device independent optimization:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 0: CPU time = 0h 0m 0.031s, Elapsed time = 0h 0m 0.024s, Peak memory usage = 109.430MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 1: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.02s, Peak memory usage = 109.430MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 2: CPU time = 0h 0m 0.031s, Elapsed time = 0h 0m 0.027s, Peak memory usage = 109.430MB<br/>Running inference:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.004s, Peak memory usage = 109.430MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.001s, Peak memory usage = 109.430MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.002s, Peak memory usage = 109.430MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 3: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.001s, Peak memory usage = 109.430MB<br/>Running technical mapping:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 0: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.029s, Peak memory usage = 109.430MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 1: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.008s, Peak memory usage = 109.430MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.004s, Peak memory usage = 109.430MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 3: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s, Peak memory usage = 122.988MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 4: CPU time = 0h 0m 0.062s, Elapsed time = 0h 0m 0.068s, Peak memory usage = 122.988MB<br/>Generate output files:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.018s, Peak memory usage = 122.988MB<br/></td>
+<td>Running parser:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.093s, Elapsed time = 0h 0m 0.165s, Peak memory usage = 147.277MB<br/>Running netlist conversion:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 0MB<br/>Running device independent optimization:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 0: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.023s, Peak memory usage = 147.277MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 1: CPU time = 0h 0m 0.031s, Elapsed time = 0h 0m 0.019s, Peak memory usage = 147.277MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 2: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.026s, Peak memory usage = 147.277MB<br/>Running inference:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.004s, Peak memory usage = 147.277MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.001s, Peak memory usage = 147.277MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.002s, Peak memory usage = 147.277MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 3: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.001s, Peak memory usage = 147.277MB<br/>Running technical mapping:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 0: CPU time = 0h 0m 0.031s, Elapsed time = 0h 0m 0.03s, Peak memory usage = 147.277MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.008s, Peak memory usage = 147.277MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 2: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.004s, Peak memory usage = 147.277MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 3: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s, Peak memory usage = 160.320MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 4: CPU time = 0h 0m 0.062s, Elapsed time = 0h 0m 0.071s, Peak memory usage = 160.320MB<br/>Generate output files:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.019s, Peak memory usage = 160.320MB<br/></td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s, Peak memory usage = 122.988MB</td>
+<td>CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s, Peak memory usage = 160.320MB</td>
 </tr>
 </table>
 <h1><a name="resource">Resource</a></h1>
@@ -252,10 +252,10 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <tr>
 <td>xtal_clk</td>
 <td>Base</td>
-<td>10.000</td>
-<td>100.0</td>
+<td>37.037</td>
+<td>27.0</td>
 <td>0.000</td>
-<td>5.000</td>
+<td>18.519</td>
 <td> </td>
 <td> </td>
 <td>xtal_clk_ibuf/I </td>
@@ -263,10 +263,10 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <tr>
 <td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
 <td>Generated</td>
-<td>2.500</td>
-<td>400.0</td>
+<td>9.972</td>
+<td>100.3</td>
 <td>0.000</td>
-<td>1.250</td>
+<td>4.986</td>
 <td>xtal_clk_ibuf/I</td>
 <td>xtal_clk</td>
 <td>uPLL/rpll_inst/CLKOUT </td>
@@ -274,10 +274,10 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <tr>
 <td>uPLL/rpll_inst/CLKOUTP.default_gen_clk</td>
 <td>Generated</td>
-<td>2.500</td>
-<td>400.0</td>
+<td>9.972</td>
+<td>100.3</td>
 <td>0.000</td>
-<td>1.250</td>
+<td>4.986</td>
 <td>xtal_clk_ibuf/I</td>
 <td>xtal_clk</td>
 <td>uPLL/rpll_inst/CLKOUTP </td>
@@ -285,10 +285,10 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <tr>
 <td>uPLL/rpll_inst/CLKOUTD.default_gen_clk</td>
 <td>Generated</td>
-<td>5.000</td>
-<td>200.0</td>
+<td>19.943</td>
+<td>50.1</td>
 <td>0.000</td>
-<td>2.500</td>
+<td>9.972</td>
 <td>xtal_clk_ibuf/I</td>
 <td>xtal_clk</td>
 <td>uPLL/rpll_inst/CLKOUTD </td>
@@ -296,10 +296,10 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <tr>
 <td>uPLL/rpll_inst/CLKOUTD3.default_gen_clk</td>
 <td>Generated</td>
-<td>7.500</td>
-<td>133.3</td>
+<td>29.915</td>
+<td>33.4</td>
 <td>0.000</td>
-<td>3.750</td>
+<td>14.957</td>
 <td>xtal_clk_ibuf/I</td>
 <td>xtal_clk</td>
 <td>uPLL/rpll_inst/CLKOUTD3 </td>
@@ -318,7 +318,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <tr>
 <td>1</td>
 <td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
-<td>400.0(MHz)</td>
+<td>100.3(MHz)</td>
 <td>112.5(MHz)</td>
 <td>6</td>
 <td>TOP</td>
@@ -330,7 +330,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>-6.389</td>
+<td>1.082</td>
 </tr>
 <tr>
 <td class="label">Data Arrival Time</td>
@@ -338,7 +338,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 </tr>
 <tr>
 <td class="label">Data Required Time</td>
-<td>4.221</td>
+<td>11.692</td>
 </tr>
 <tr>
 <td class="label">From</td>
@@ -499,7 +499,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <th>NODE</th>
 </tr>
 <tr>
-<td>2.500</td>
+<td>9.972</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
@@ -507,7 +507,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
-<td>4.258</td>
+<td>11.729</td>
 <td>1.758</td>
 <td>tCL</td>
 <td>RR</td>
@@ -515,7 +515,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <td>uPLL/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
-<td>4.621</td>
+<td>12.092</td>
 <td>0.363</td>
 <td>tNET</td>
 <td>RR</td>
@@ -523,7 +523,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <td>lcd_init_inst/init_data_0_s0/CLK</td>
 </tr>
 <tr>
-<td>4.221</td>
+<td>11.692</td>
 <td>-0.400</td>
 <td>tSu</td>
 <td> </td>
@@ -539,7 +539,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 </tr>
 <tr>
 <td class="label">Setup Relationship:</td>
-<td>2.500</td>
+<td>9.972</td>
 </tr>
 <tr>
 <td class="label">Logic Level:</td>
@@ -558,7 +558,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>-6.389</td>
+<td>1.082</td>
 </tr>
 <tr>
 <td class="label">Data Arrival Time</td>
@@ -566,7 +566,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 </tr>
 <tr>
 <td class="label">Data Required Time</td>
-<td>4.221</td>
+<td>11.692</td>
 </tr>
 <tr>
 <td class="label">From</td>
@@ -727,7 +727,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <th>NODE</th>
 </tr>
 <tr>
-<td>2.500</td>
+<td>9.972</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
@@ -735,7 +735,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
-<td>4.258</td>
+<td>11.729</td>
 <td>1.758</td>
 <td>tCL</td>
 <td>RR</td>
@@ -743,7 +743,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <td>uPLL/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
-<td>4.621</td>
+<td>12.092</td>
 <td>0.363</td>
 <td>tNET</td>
 <td>RR</td>
@@ -751,7 +751,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <td>lcd_init_inst/init_data_3_s0/CLK</td>
 </tr>
 <tr>
-<td>4.221</td>
+<td>11.692</td>
 <td>-0.400</td>
 <td>tSu</td>
 <td> </td>
@@ -767,7 +767,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 </tr>
 <tr>
 <td class="label">Setup Relationship:</td>
-<td>2.500</td>
+<td>9.972</td>
 </tr>
 <tr>
 <td class="label">Logic Level:</td>
@@ -786,7 +786,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>-6.322</td>
+<td>1.149</td>
 </tr>
 <tr>
 <td class="label">Data Arrival Time</td>
@@ -794,7 +794,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 </tr>
 <tr>
 <td class="label">Data Required Time</td>
-<td>4.221</td>
+<td>11.692</td>
 </tr>
 <tr>
 <td class="label">From</td>
@@ -955,7 +955,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <th>NODE</th>
 </tr>
 <tr>
-<td>2.500</td>
+<td>9.972</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
@@ -963,7 +963,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
-<td>4.258</td>
+<td>11.729</td>
 <td>1.758</td>
 <td>tCL</td>
 <td>RR</td>
@@ -971,7 +971,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <td>uPLL/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
-<td>4.621</td>
+<td>12.092</td>
 <td>0.363</td>
 <td>tNET</td>
 <td>RR</td>
@@ -979,7 +979,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <td>lcd_init_inst/init_data_5_s0/CLK</td>
 </tr>
 <tr>
-<td>4.221</td>
+<td>11.692</td>
 <td>-0.400</td>
 <td>tSu</td>
 <td> </td>
@@ -995,7 +995,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 </tr>
 <tr>
 <td class="label">Setup Relationship:</td>
-<td>2.500</td>
+<td>9.972</td>
 </tr>
 <tr>
 <td class="label">Logic Level:</td>
@@ -1014,7 +1014,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>-6.260</td>
+<td>1.211</td>
 </tr>
 <tr>
 <td class="label">Data Arrival Time</td>
@@ -1022,7 +1022,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 </tr>
 <tr>
 <td class="label">Data Required Time</td>
-<td>4.221</td>
+<td>11.692</td>
 </tr>
 <tr>
 <td class="label">From</td>
@@ -1183,7 +1183,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <th>NODE</th>
 </tr>
 <tr>
-<td>2.500</td>
+<td>9.972</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
@@ -1191,7 +1191,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
-<td>4.258</td>
+<td>11.729</td>
 <td>1.758</td>
 <td>tCL</td>
 <td>RR</td>
@@ -1199,7 +1199,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <td>uPLL/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
-<td>4.621</td>
+<td>12.092</td>
 <td>0.363</td>
 <td>tNET</td>
 <td>RR</td>
@@ -1207,7 +1207,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <td>lcd_init_inst/init_data_4_s0/CLK</td>
 </tr>
 <tr>
-<td>4.221</td>
+<td>11.692</td>
 <td>-0.400</td>
 <td>tSu</td>
 <td> </td>
@@ -1223,7 +1223,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 </tr>
 <tr>
 <td class="label">Setup Relationship:</td>
-<td>2.500</td>
+<td>9.972</td>
 </tr>
 <tr>
 <td class="label">Logic Level:</td>
@@ -1242,7 +1242,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>-6.193</td>
+<td>1.278</td>
 </tr>
 <tr>
 <td class="label">Data Arrival Time</td>
@@ -1250,7 +1250,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 </tr>
 <tr>
 <td class="label">Data Required Time</td>
-<td>4.221</td>
+<td>11.692</td>
 </tr>
 <tr>
 <td class="label">From</td>
@@ -1411,7 +1411,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <th>NODE</th>
 </tr>
 <tr>
-<td>2.500</td>
+<td>9.972</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
@@ -1419,7 +1419,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
-<td>4.258</td>
+<td>11.729</td>
 <td>1.758</td>
 <td>tCL</td>
 <td>RR</td>
@@ -1427,7 +1427,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <td>uPLL/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
-<td>4.621</td>
+<td>12.092</td>
 <td>0.363</td>
 <td>tNET</td>
 <td>RR</td>
@@ -1435,7 +1435,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 <td>lcd_init_inst/init_data_1_s0/CLK</td>
 </tr>
 <tr>
-<td>4.221</td>
+<td>11.692</td>
 <td>-0.400</td>
 <td>tSu</td>
 <td> </td>
@@ -1451,7 +1451,7 @@ F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\spi_st7735lcd.v<b
 </tr>
 <tr>
 <td class="label">Setup Relationship:</td>
-<td>2.500</td>
+<td>9.972</td>
 </tr>
 <tr>
 <td class="label">Logic Level:</td>
