--- a/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.pin.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.pin.html
@@ -50,11 +50,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\impl\gwsynthesis\SPIlcd_prj.vg</td>
+<td>D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\impl\gwsynthesis\SPIlcd_prj.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\LCDAir_pre1.cst</td>
+<td>D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\LCDAir_pre1.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -74,7 +74,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon May 13 15:07:33 2024
+<td>Fri May 17 05:19:43 2024
 </td>
 </tr>
 <tr>
@@ -126,10 +126,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">sys_rst_n</td>
 <td></td>
-<td>14/3</td>
+<td>3/3</td>
 <td>Y</td>
 <td>in</td>
-<td>IOL22[B]</td>
+<td>IOT2[A]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -298,7 +298,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">3/3</td>
-<td>-</td>
+<td>sys_rst_n</td>
 <td>in</td>
 <td>IOT2[A]</td>
 <td>LVCMOS18</td>
@@ -309,7 +309,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
@@ -1199,7 +1199,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">14/3</td>
-<td>sys_rst_n</td>
+<td>-</td>
 <td>in</td>
 <td>IOL22[B]</td>
 <td>LVCMOS18</td>
@@ -1210,7 +1210,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
+<td>NA</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
