--- a/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn_resource.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/gwsynthesis/SPIlcd_prj_syn_resource.html
@@ -29,7 +29,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <th class="label">SSRAM NUMBER</th>
 </tr>
 <tr>
-<td class="label">spi_st7735lcd (F:/workspace/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+<td class="label">spi_st7735lcd (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">1</td>
@@ -38,7 +38,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--uPLL
- (F:/workspace/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -47,7 +47,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--lcd_init_inst
- (F:/workspace/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">68</td>
 <td align = "center">-</td>
 <td align = "center">235</td>
@@ -56,7 +56,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--muxcontrol_inst
- (F:/workspace/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">10</td>
 <td align = "center">-</td>
 <td align = "center">12</td>
@@ -65,7 +65,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--lcd_write_inst
- (F:/workspace/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">21</td>
 <td align = "center">-</td>
 <td align = "center">33</td>
@@ -74,7 +74,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--show_string_number_inst
- (F:/workspace/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">21</td>
 <td align = "center">4</td>
 <td align = "center">25</td>
@@ -83,7 +83,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--lcd_show_char_inst
- (F:/workspace/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/spi_st7735lcd.v)</td>
 <td align = "center">53</td>
 <td align = "center">9</td>
 <td align = "center">80</td>
@@ -92,7 +92,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp|--your_instance_name
- (F:/workspace/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/lcd_show_char.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/GwFPGAspi_st7735lcd_v2/src/lcd_show_char.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
