--- a/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.power.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.power.html
@@ -59,11 +59,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\impl\gwsynthesis\SPIlcd_prj.vg</td>
+<td>D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\impl\gwsynthesis\SPIlcd_prj.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\LCDAir_pre1.cst</td>
+<td>D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\LCDAir_pre1.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon May 13 15:07:33 2024
+<td>Fri May 17 05:19:43 2024
 </td>
 </tr>
 <tr>
@@ -96,15 +96,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>27.279</td>
+<td>13.363</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
-<td>8.700</td>
+<td>8.694</td>
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>18.579</td>
+<td>4.669</td>
 </tr>
 <tr>
 <td class="label">Psram Power (mW)</td>
@@ -115,7 +115,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>25.590</td>
+<td>25.292</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -123,7 +123,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>84.410</td>
+<td>84.708</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -192,30 +192,30 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.200</td>
-<td>12.558</td>
-<td>1.994</td>
-<td>17.463</td>
+<td>3.151</td>
+<td>1.990</td>
+<td>6.169</td>
 </tr>
 <tr>
 <td>VCCX</td>
 <td>2.500</td>
-<td>0.628</td>
+<td>0.159</td>
 <td>2.424</td>
-<td>7.630</td>
+<td>6.457</td>
 </tr>
 <tr>
 <td>VCCO18</td>
 <td>1.800</td>
-<td>0.086</td>
+<td>0.022</td>
 <td>0.013</td>
-<td>0.178</td>
+<td>0.062</td>
 </tr>
 <tr>
 <td>VCCO33</td>
 <td>3.300</td>
-<td>0.541</td>
+<td>0.137</td>
 <td>0.068</td>
-<td>2.008</td>
+<td>0.675</td>
 </tr>
 </table>
 <h1><a name="Detail">Power Details</a></h1>
@@ -229,25 +229,25 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>Logic</td>
-<td>0.603</td>
+<td>0.151</td>
 <td>NA</td>
-<td>50.000</td>
+<td>12.536</td>
 </tr>
 <tr>
 <td>IO</td>
-<td>4.807
+<td>1.622
 <td>0.544
-<td>50.000
+<td>12.750
 </tr>
 <tr>
 <td>BSRAM</td>
-<td>2.534
+<td>0.635
 <td>NA</td>
 <td>NA</td>
 </tr>
 <tr>
 <td>PLL</td>
-<td>11.158
+<td>2.797
 <td>NA</td>
 <td>NA</td>
 </tr>
@@ -261,36 +261,36 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>spi_st7735lcd</td>
-<td>14.295</td>
-<td>14.295(14.294)</td>
+<td>3.584</td>
+<td>3.584(3.584)</td>
 <tr>
 <td>spi_st7735lcd/lcd_init_inst/</td>
-<td>0.285</td>
-<td>0.285(0.000)</td>
+<td>0.071</td>
+<td>0.071(0.000)</td>
 <tr>
 <td>spi_st7735lcd/lcd_show_char_inst/</td>
-<td>2.719</td>
-<td>2.719(2.534)</td>
+<td>0.682</td>
+<td>0.682(0.635)</td>
 <tr>
 <td>spi_st7735lcd/lcd_show_char_inst/your_instance_name/</td>
-<td>2.534</td>
-<td>2.534(0.000)</td>
+<td>0.635</td>
+<td>0.635(0.000)</td>
 <tr>
 <td>spi_st7735lcd/lcd_write_inst/</td>
-<td>0.047</td>
-<td>0.047(0.000)</td>
+<td>0.012</td>
+<td>0.012(0.000)</td>
 <tr>
 <td>spi_st7735lcd/muxcontrol_inst/</td>
-<td>0.018</td>
-<td>0.018(0.000)</td>
+<td>0.005</td>
+<td>0.005(0.000)</td>
 <tr>
 <td>spi_st7735lcd/show_string_number_inst/</td>
-<td>0.068</td>
-<td>0.068(0.000)</td>
+<td>0.017</td>
+<td>0.017(0.000)</td>
 <tr>
 <td>spi_st7735lcd/uPLL/</td>
-<td>11.158</td>
-<td>11.158(0.000)</td>
+<td>2.797</td>
+<td>2.797(0.000)</td>
 </table>
 <h2><a name="By_Clock_Domain">Power By Clock Domain:</a></h2>
 <table class="detail_table">
@@ -301,13 +301,13 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>uPLL/rpll_inst/CLKOUT.default_gen_clk</td>
-<td>400.000</td>
-<td>3.159</td>
+<td>100.286</td>
+<td>0.794</td>
 </tr>
 <tr>
 <td>xtal_clk</td>
-<td>100.000</td>
-<td>11.158</td>
+<td>27.000</td>
+<td>2.797</td>
 </tr>
 </table>
 </div><!-- content -->
