--- a/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.rpt.html
+++ b/samples/GwFPGAspi_st7735lcd_v2/impl/pnr/SPIlcd_prj.rpt.html
@@ -55,11 +55,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\impl\gwsynthesis\SPIlcd_prj.vg</td>
+<td>D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\impl\gwsynthesis\SPIlcd_prj.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>F:\workspace\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\LCDAir_pre1.cst</td>
+<td>D:\OneDrive\GIt\HardwareDesign\samples\GwFPGAspi_st7735lcd_v2\src\LCDAir_pre1.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -79,7 +79,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon May 13 15:07:33 2024
+<td>Fri May 17 05:19:43 2024
 </td>
 </tr>
 <tr>
@@ -93,23 +93,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">Place & Route Process</td>
 <td>Running placement:
-   Placement Phase 0: CPU time = 0h 0m 0.02s, Elapsed time = 0h 0m 0.02s
+   Placement Phase 0: CPU time = 0h 0m 0.02s, Elapsed time = 0h 0m 0.021s
    Placement Phase 1: CPU time = 0h 0m 0.064s, Elapsed time = 0h 0m 0.063s
-   Placement Phase 2: CPU time = 0h 0m 0.021s, Elapsed time = 0h 0m 0.022s
-   Placement Phase 3: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
-   Total Placement: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
+   Placement Phase 2: CPU time = 0h 0m 0.019s, Elapsed time = 0h 0m 0.019s
+   Placement Phase 3: CPU time = 0h 0m 0.725s, Elapsed time = 0h 0m 0.725s
+   Total Placement: CPU time = 0h 0m 0.828s, Elapsed time = 0h 0m 0.828s
 Running routing:
-   Routing Phase 0: CPU time = 0h 0m 0.001s, Elapsed time = 0h 0m 0s
-   Routing Phase 1: CPU time = 0h 0m 0.154s, Elapsed time = 0h 0m 0.154s
-   Routing Phase 2: CPU time = 0h 0m 0.248s, Elapsed time = 0h 0m 0.249s
-   Total Routing: CPU time = 0h 0m 0.403s, Elapsed time = 0h 0m 0.403s
+   Routing Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s
+   Routing Phase 1: CPU time = 0h 0m 0.156s, Elapsed time = 0h 0m 0.156s
+   Routing Phase 2: CPU time = 0h 0m 0.187s, Elapsed time = 0h 0m 0.187s
+   Total Routing: CPU time = 0h 0m 0.343s, Elapsed time = 0h 0m 0.343s
 Generate output files:
    CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
 </td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 4s, Elapsed time = 0h 0m 4s, Peak memory usage = 214MB</td>
+<td>CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s, Peak memory usage = 250MB</td>
 </tr>
 </table>
 <br/>
@@ -164,7 +164,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">CLS</td>
-<td>248/4320</td>
+<td>234/4320</td>
 <td>5%</td>
 </tr>
 <tr>
@@ -314,7 +314,7 @@ Generate output files:
 <tr>
 <td class="label">sys_clk</td>
 <td>PRIMARY</td>
-<td> TR BR BL</td>
+<td> TR TL BR BL</td>
 </tr>
 <tr>
 <td class="label">sys_rst_n_d</td>
@@ -371,10 +371,10 @@ Generate output files:
 <tr>
 <td class="label">sys_rst_n</td>
 <td></td>
-<td>14/3</td>
+<td>3/3</td>
 <td>Y</td>
 <td>in</td>
-<td>IOL22[B]</td>
+<td>IOT2[A]</td>
 <td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
@@ -543,7 +543,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">3/3</td>
-<td>-</td>
+<td>sys_rst_n</td>
 <td>in</td>
 <td>IOT2[A]</td>
 <td>LVCMOS18</td>
@@ -554,7 +554,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>NA</td>
+<td>OFF</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
@@ -1444,7 +1444,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">14/3</td>
-<td>sys_rst_n</td>
+<td>-</td>
 <td>in</td>
 <td>IOL22[B]</td>
 <td>LVCMOS18</td>
@@ -1455,7 +1455,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
+<td>NA</td>
 <td>NA</td>
 <td>1.8</td>
 </tr>
