--- a/samples/PmodKYP_test/impl/gwsynthesis/PmodKYP_test_syn_resource.html
+++ b/samples/PmodKYP_test/impl/gwsynthesis/PmodKYP_test_syn_resource.html
@@ -29,7 +29,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <th class="label">SSRAM NUMBER</th>
 </tr>
 <tr>
-<td class="label">PmodKYPD_Top (F:/workspace/HardwareDesign/samples/PmodKYP_test/src/PmodKYPD_Top.v)</td>
+<td class="label">PmodKYPD_Top (D:/OneDrive/GIt/HardwareDesign/samples/PmodKYP_test/src/PmodKYPD_Top.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -38,7 +38,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--rPLL_init
- (F:/workspace/HardwareDesign/samples/PmodKYP_test/src/PmodKYPD_Top.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/PmodKYP_test/src/PmodKYPD_Top.v)</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
 <td align = "center">-</td>
@@ -47,7 +47,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--Decoder
- (F:/workspace/HardwareDesign/samples/PmodKYP_test/src/PmodKYPD_Top.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/PmodKYP_test/src/PmodKYPD_Top.v)</td>
 <td align = "center">28</td>
 <td align = "center">-</td>
 <td align = "center">83</td>
@@ -56,7 +56,7 @@ table td.label { width: 20%; white-space: nowrap; min-width: 20px; background-co
 <td align = "center">-</td>
 </tr>
 <td class="label">&nbsp&nbsp&nbsp&nbsp|--LShow
- (F:/workspace/HardwareDesign/samples/PmodKYP_test/src/PmodKYPD_Top.v)</td>
+ (D:/OneDrive/GIt/HardwareDesign/samples/PmodKYP_test/src/PmodKYPD_Top.v)</td>
 <td align = "center">5</td>
 <td align = "center">-</td>
 <td align = "center">5</td>
