--- a/samples/PmodKYP_test/impl/pnr/PmodKYP_test.pin.html
+++ b/samples/PmodKYP_test/impl/pnr/PmodKYP_test.pin.html
@@ -50,11 +50,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>F:\workspace\HardwareDesign\samples\PmodKYP_test\impl\gwsynthesis\PmodKYP_test.vg</td>
+<td>D:\OneDrive\GIt\HardwareDesign\samples\PmodKYP_test\impl\gwsynthesis\PmodKYP_test.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>F:\workspace\HardwareDesign\samples\PmodKYP_test\src\PmodKYP_test.cst</td>
+<td>D:\OneDrive\GIt\HardwareDesign\samples\PmodKYP_test\src\PmodKYP_test.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -74,7 +74,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Thu May 16 18:07:26 2024
+<td>Fri May 17 05:22:04 2024
 </td>
 </tr>
 <tr>
