--- a/samples/PmodKYP_test/impl/gwsynthesis/PmodKYP_test_syn.rpt.html
+++ b/samples/PmodKYP_test/impl/gwsynthesis/PmodKYP_test_syn.rpt.html
@@ -55,10 +55,10 @@ table.detail_table td.label { min-width: 100px; width: 8%;}
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>F:\workspace\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
-F:\workspace\HardwareDesign\samples\PmodKYP_test\src\PmodKYPD_Decoder.v<br>
-F:\workspace\HardwareDesign\samples\PmodKYP_test\src\PmodKYPD_Top.v<br>
-F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br>
+<td>D:\OneDrive\GIt\HardwareDesign\samples\PmodKYP_test\src\LED_Show.v<br>
+D:\OneDrive\GIt\HardwareDesign\samples\PmodKYP_test\src\PmodKYPD_Decoder.v<br>
+D:\OneDrive\GIt\HardwareDesign\samples\PmodKYP_test\src\PmodKYPD_Top.v<br>
+D:\OneDrive\GIt\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_27_100.v<br>
 </td>
 </tr>
 <tr>
@@ -79,7 +79,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Thu May 16 18:07:23 2024
+<td>Fri May 17 05:22:00 2024
 </td>
 </tr>
 <tr>
@@ -95,11 +95,11 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 </tr>
 <tr>
 <td class="label">Synthesis Process</td>
-<td>Running parser:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.078s, Elapsed time = 0h 0m 0.087s, Peak memory usage = 216.133MB<br/>Running netlist conversion:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 0MB<br/>Running device independent optimization:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.002s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.002s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.002s, Peak memory usage = 216.133MB<br/>Running inference:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 3: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 216.133MB<br/>Running technical mapping:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.004s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.003s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.001s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 3: CPU time = 0h 0m 0.421s, Elapsed time = 0h 0m 0.454s, Peak memory usage = 216.133MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 4: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.016s, Peak memory usage = 216.133MB<br/>Generate output files:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.006s, Peak memory usage = 216.133MB<br/></td>
+<td>Running parser:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0.109s, Elapsed time = 0h 0m 0.137s, Peak memory usage = 97.598MB<br/>Running netlist conversion:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 0MB<br/>Running device independent optimization:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 0: CPU time = 0h 0m 0.015s, Elapsed time = 0h 0m 0.002s, Peak memory usage = 97.598MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.002s, Peak memory usage = 97.598MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Optimizing Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.002s, Peak memory usage = 97.598MB<br/>Running inference:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 97.598MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 97.598MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 97.598MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Inferring Phase 3: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s, Peak memory usage = 97.598MB<br/>Running technical mapping:<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.004s, Peak memory usage = 97.598MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 1: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.003s, Peak memory usage = 97.598MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.001s, Peak memory usage = 97.598MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 3: CPU time = 0h 0m 0.437s, Elapsed time = 0h 0m 0.458s, Peak memory usage = 108.988MB<br/>&nbsp;&nbsp;&nbsp;&nbsp;Tech-Mapping Phase 4: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.015s, Peak memory usage = 108.988MB<br/>Generate output files:<br/>&nbsp;&nbsp;&nbsp;&nbsp;CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.006s, Peak memory usage = 108.988MB<br/></td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 0.529s, Elapsed time = 0h 0m 0.577s, Peak memory usage = 216.133MB</td>
+<td>CPU time = 0h 0m 0.561s, Elapsed time = 0h 0m 0.63s, Peak memory usage = 108.988MB</td>
 </tr>
 </table>
 <h1><a name="resource">Resource</a></h1>
@@ -236,10 +236,10 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <tr>
 <td>xtal_clk</td>
 <td>Base</td>
-<td>40.000</td>
-<td>25.0</td>
+<td>37.037</td>
+<td>27.0</td>
 <td>0.000</td>
-<td>20.000</td>
+<td>18.519</td>
 <td> </td>
 <td> </td>
 <td>xtal_clk_ibuf/I </td>
@@ -247,10 +247,10 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <tr>
 <td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 <td>Generated</td>
-<td>10.000</td>
-<td>100.0</td>
+<td>9.972</td>
+<td>100.3</td>
 <td>0.000</td>
-<td>5.000</td>
+<td>4.986</td>
 <td>xtal_clk_ibuf/I</td>
 <td>xtal_clk</td>
 <td>rPLL_init/rpll_inst/CLKOUT </td>
@@ -258,10 +258,10 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <tr>
 <td>rPLL_init/rpll_inst/CLKOUTP.default_gen_clk</td>
 <td>Generated</td>
-<td>10.000</td>
-<td>100.0</td>
+<td>9.972</td>
+<td>100.3</td>
 <td>0.000</td>
-<td>5.000</td>
+<td>4.986</td>
 <td>xtal_clk_ibuf/I</td>
 <td>xtal_clk</td>
 <td>rPLL_init/rpll_inst/CLKOUTP </td>
@@ -269,10 +269,10 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <tr>
 <td>rPLL_init/rpll_inst/CLKOUTD.default_gen_clk</td>
 <td>Generated</td>
-<td>20.000</td>
-<td>50.0</td>
+<td>19.943</td>
+<td>50.1</td>
 <td>0.000</td>
-<td>10.000</td>
+<td>9.972</td>
 <td>xtal_clk_ibuf/I</td>
 <td>xtal_clk</td>
 <td>rPLL_init/rpll_inst/CLKOUTD </td>
@@ -280,10 +280,10 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <tr>
 <td>rPLL_init/rpll_inst/CLKOUTD3.default_gen_clk</td>
 <td>Generated</td>
-<td>30.000</td>
-<td>33.3</td>
+<td>29.915</td>
+<td>33.4</td>
 <td>0.000</td>
-<td>15.000</td>
+<td>14.957</td>
 <td>xtal_clk_ibuf/I</td>
 <td>xtal_clk</td>
 <td>rPLL_init/rpll_inst/CLKOUTD3 </td>
@@ -302,7 +302,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <tr>
 <td>1</td>
 <td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
-<td>100.0(MHz)</td>
+<td>100.3(MHz)</td>
 <td>94.9(MHz)</td>
 <td>7</td>
 <td>TOP</td>
@@ -314,7 +314,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>-0.535</td>
+<td>-0.564</td>
 </tr>
 <tr>
 <td class="label">Data Arrival Time</td>
@@ -322,7 +322,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 </tr>
 <tr>
 <td class="label">Data Required Time</td>
-<td>11.721</td>
+<td>11.692</td>
 </tr>
 <tr>
 <td class="label">From</td>
@@ -499,7 +499,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <th>NODE</th>
 </tr>
 <tr>
-<td>10.000</td>
+<td>9.972</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
@@ -507,7 +507,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
-<td>11.758</td>
+<td>11.729</td>
 <td>1.758</td>
 <td>tCL</td>
 <td>RR</td>
@@ -515,7 +515,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <td>rPLL_init/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
-<td>12.121</td>
+<td>12.092</td>
 <td>0.363</td>
 <td>tNET</td>
 <td>RR</td>
@@ -523,7 +523,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <td>Decoder/DecodeOut_0_s0/CLK</td>
 </tr>
 <tr>
-<td>11.721</td>
+<td>11.692</td>
 <td>-0.400</td>
 <td>tSu</td>
 <td> </td>
@@ -539,7 +539,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 </tr>
 <tr>
 <td class="label">Setup Relationship:</td>
-<td>10.000</td>
+<td>9.972</td>
 </tr>
 <tr>
 <td class="label">Logic Level:</td>
@@ -558,7 +558,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>-0.468</td>
+<td>-0.497</td>
 </tr>
 <tr>
 <td class="label">Data Arrival Time</td>
@@ -566,7 +566,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 </tr>
 <tr>
 <td class="label">Data Required Time</td>
-<td>11.721</td>
+<td>11.692</td>
 </tr>
 <tr>
 <td class="label">From</td>
@@ -743,7 +743,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <th>NODE</th>
 </tr>
 <tr>
-<td>10.000</td>
+<td>9.972</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
@@ -751,7 +751,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
-<td>11.758</td>
+<td>11.729</td>
 <td>1.758</td>
 <td>tCL</td>
 <td>RR</td>
@@ -759,7 +759,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <td>rPLL_init/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
-<td>12.121</td>
+<td>12.092</td>
 <td>0.363</td>
 <td>tNET</td>
 <td>RR</td>
@@ -767,7 +767,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <td>Decoder/DecodeOut_2_s0/CLK</td>
 </tr>
 <tr>
-<td>11.721</td>
+<td>11.692</td>
 <td>-0.400</td>
 <td>tSu</td>
 <td> </td>
@@ -783,7 +783,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 </tr>
 <tr>
 <td class="label">Setup Relationship:</td>
-<td>10.000</td>
+<td>9.972</td>
 </tr>
 <tr>
 <td class="label">Logic Level:</td>
@@ -802,7 +802,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>1.044</td>
+<td>1.015</td>
 </tr>
 <tr>
 <td class="label">Data Arrival Time</td>
@@ -810,7 +810,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 </tr>
 <tr>
 <td class="label">Data Required Time</td>
-<td>11.721</td>
+<td>11.692</td>
 </tr>
 <tr>
 <td class="label">From</td>
@@ -971,7 +971,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <th>NODE</th>
 </tr>
 <tr>
-<td>10.000</td>
+<td>9.972</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
@@ -979,7 +979,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
-<td>11.758</td>
+<td>11.729</td>
 <td>1.758</td>
 <td>tCL</td>
 <td>RR</td>
@@ -987,7 +987,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <td>rPLL_init/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
-<td>12.121</td>
+<td>12.092</td>
 <td>0.363</td>
 <td>tNET</td>
 <td>RR</td>
@@ -995,7 +995,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <td>Decoder/DecodeOut_1_s0/CLK</td>
 </tr>
 <tr>
-<td>11.721</td>
+<td>11.692</td>
 <td>-0.400</td>
 <td>tSu</td>
 <td> </td>
@@ -1011,7 +1011,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 </tr>
 <tr>
 <td class="label">Setup Relationship:</td>
-<td>10.000</td>
+<td>9.972</td>
 </tr>
 <tr>
 <td class="label">Logic Level:</td>
@@ -1030,7 +1030,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>1.794</td>
+<td>1.765</td>
 </tr>
 <tr>
 <td class="label">Data Arrival Time</td>
@@ -1038,7 +1038,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 </tr>
 <tr>
 <td class="label">Data Required Time</td>
-<td>11.721</td>
+<td>11.692</td>
 </tr>
 <tr>
 <td class="label">From</td>
@@ -1199,7 +1199,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <th>NODE</th>
 </tr>
 <tr>
-<td>10.000</td>
+<td>9.972</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
@@ -1207,7 +1207,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
-<td>11.758</td>
+<td>11.729</td>
 <td>1.758</td>
 <td>tCL</td>
 <td>RR</td>
@@ -1215,7 +1215,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <td>rPLL_init/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
-<td>12.121</td>
+<td>12.092</td>
 <td>0.363</td>
 <td>tNET</td>
 <td>RR</td>
@@ -1223,7 +1223,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <td>Decoder/sclk_11_s0/CLK</td>
 </tr>
 <tr>
-<td>11.721</td>
+<td>11.692</td>
 <td>-0.400</td>
 <td>tSu</td>
 <td> </td>
@@ -1239,7 +1239,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 </tr>
 <tr>
 <td class="label">Setup Relationship:</td>
-<td>10.000</td>
+<td>9.972</td>
 </tr>
 <tr>
 <td class="label">Logic Level:</td>
@@ -1258,7 +1258,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <table class="summary_table">
 <tr>
 <td class="label">Slack</td>
-<td>1.847</td>
+<td>1.818</td>
 </tr>
 <tr>
 <td class="label">Data Arrival Time</td>
@@ -1266,7 +1266,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 </tr>
 <tr>
 <td class="label">Data Required Time</td>
-<td>11.721</td>
+<td>11.692</td>
 </tr>
 <tr>
 <td class="label">From</td>
@@ -1427,7 +1427,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <th>NODE</th>
 </tr>
 <tr>
-<td>10.000</td>
+<td>9.972</td>
 <td>0.000</td>
 <td> </td>
 <td> </td>
@@ -1435,7 +1435,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
 </tr>
 <tr>
-<td>11.758</td>
+<td>11.729</td>
 <td>1.758</td>
 <td>tCL</td>
 <td>RR</td>
@@ -1443,7 +1443,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <td>rPLL_init/rpll_inst/CLKOUT</td>
 </tr>
 <tr>
-<td>12.121</td>
+<td>12.092</td>
 <td>0.363</td>
 <td>tNET</td>
 <td>RR</td>
@@ -1451,7 +1451,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 <td>Decoder/sclk_16_s0/CLK</td>
 </tr>
 <tr>
-<td>11.721</td>
+<td>11.692</td>
 <td>-0.400</td>
 <td>tSu</td>
 <td> </td>
@@ -1467,7 +1467,7 @@ F:\workspace\HardwareDesign\samples\PmodKYP_test\src\gowin_rpll\rPLL_25_100.v<br
 </tr>
 <tr>
 <td class="label">Setup Relationship:</td>
-<td>10.000</td>
+<td>9.972</td>
 </tr>
 <tr>
 <td class="label">Logic Level:</td>
