--- a/samples/PmodKYP_test/impl/pnr/PmodKYP_test.power.html
+++ b/samples/PmodKYP_test/impl/pnr/PmodKYP_test.power.html
@@ -59,11 +59,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>F:\workspace\HardwareDesign\samples\PmodKYP_test\impl\gwsynthesis\PmodKYP_test.vg</td>
+<td>D:\OneDrive\GIt\HardwareDesign\samples\PmodKYP_test\impl\gwsynthesis\PmodKYP_test.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>F:\workspace\HardwareDesign\samples\PmodKYP_test\src\PmodKYP_test.cst</td>
+<td>D:\OneDrive\GIt\HardwareDesign\samples\PmodKYP_test\src\PmodKYP_test.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Thu May 16 18:07:26 2024
+<td>Fri May 17 05:22:04 2024
 </td>
 </tr>
 <tr>
@@ -96,7 +96,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>12.555</td>
+<td>12.572</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
@@ -104,7 +104,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>3.856</td>
+<td>3.874</td>
 </tr>
 <tr>
 <td class="label">Psram Power (mW)</td>
@@ -115,7 +115,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>25.273</td>
+<td>25.274</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -123,7 +123,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>84.727</td>
+<td>84.726</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -192,30 +192,30 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td>VCC</td>
 <td>1.200</td>
-<td>2.541</td>
+<td>2.550</td>
 <td>2.023</td>
-<td>5.477</td>
+<td>5.487</td>
 </tr>
 <tr>
 <td>VCCX</td>
 <td>2.500</td>
-<td>0.190</td>
+<td>0.192</td>
 <td>2.424</td>
-<td>6.536</td>
+<td>6.541</td>
 </tr>
 <tr>
 <td>VCCO12</td>
 <td>1.200</td>
-<td>0.018</td>
+<td>0.019</td>
 <td>0.003</td>
-<td>0.024</td>
+<td>0.026</td>
 </tr>
 <tr>
 <td>VCCO18</td>
 <td>1.800</td>
-<td>0.172</td>
+<td>0.173</td>
 <td>0.115</td>
-<td>0.517</td>
+<td>0.518</td>
 </tr>
 </table>
 <h1><a name="Detail">Power Details</a></h1>
@@ -231,17 +231,17 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>Logic</td>
 <td>0.026</td>
 <td>NA</td>
-<td>11.875</td>
+<td>11.909</td>
 </tr>
 <tr>
 <td>IO</td>
-<td>1.686
+<td>1.695
 <td>0.650
-<td>13.281
+<td>13.440
 </tr>
 <tr>
 <td>PLL</td>
-<td>2.789
+<td>2.797
 <td>NA</td>
 <td>NA</td>
 </tr>
@@ -255,8 +255,8 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>PmodKYPD_Top</td>
-<td>2.815</td>
-<td>2.815(2.815)</td>
+<td>2.823</td>
+<td>2.823(2.823)</td>
 <tr>
 <td>PmodKYPD_Top/Decoder/</td>
 <td>0.024</td>
@@ -267,8 +267,8 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>0.002(0.000)</td>
 <tr>
 <td>PmodKYPD_Top/rPLL_init/</td>
-<td>2.789</td>
-<td>2.789(0.000)</td>
+<td>2.797</td>
+<td>2.797(0.000)</td>
 </table>
 <h2><a name="By_Clock_Domain">Power By Clock Domain:</a></h2>
 <table class="detail_table">
@@ -279,8 +279,8 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>rPLL_init/rpll_inst/CLKOUT.default_gen_clk</td>
-<td>100.000</td>
-<td>0.031</td>
+<td>100.286</td>
+<td>0.032</td>
 </tr>
 <tr>
 <td>NO CLOCK DOMAIN</td>
@@ -289,8 +289,8 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>xtal_clk</td>
-<td>25.000</td>
-<td>2.789</td>
+<td>27.000</td>
+<td>2.797</td>
 </tr>
 </table>
 </div><!-- content -->
