--- a/samples/PmodKYP_test/impl/pnr/PmodKYP_test.rpt.html
+++ b/samples/PmodKYP_test/impl/pnr/PmodKYP_test.rpt.html
@@ -55,11 +55,11 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Design File</td>
-<td>F:\workspace\HardwareDesign\samples\PmodKYP_test\impl\gwsynthesis\PmodKYP_test.vg</td>
+<td>D:\OneDrive\GIt\HardwareDesign\samples\PmodKYP_test\impl\gwsynthesis\PmodKYP_test.vg</td>
 </tr>
 <tr>
 <td class="label">Physical Constraints File</td>
-<td>F:\workspace\HardwareDesign\samples\PmodKYP_test\src\PmodKYP_test.cst</td>
+<td>D:\OneDrive\GIt\HardwareDesign\samples\PmodKYP_test\src\PmodKYP_test.cst</td>
 </tr>
 <tr>
 <td class="label">Timing Constraints File</td>
@@ -79,7 +79,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Thu May 16 18:07:26 2024
+<td>Fri May 17 05:22:04 2024
 </td>
 </tr>
 <tr>
@@ -93,23 +93,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">Place & Route Process</td>
 <td>Running placement:
-   Placement Phase 0: CPU time = 0h 0m 0.004s, Elapsed time = 0h 0m 0.004s
-   Placement Phase 1: CPU time = 0h 0m 0.063s, Elapsed time = 0h 0m 0.062s
-   Placement Phase 2: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0.001s
-   Placement Phase 3: CPU time = 0h 0m 0.684s, Elapsed time = 0h 0m 0.684s
-   Total Placement: CPU time = 0h 0m 0.751s, Elapsed time = 0h 0m 0.751s
+   Placement Phase 0: CPU time = 0h 0m 0.005s, Elapsed time = 0h 0m 0.004s
+   Placement Phase 1: CPU time = 0h 0m 0.063s, Elapsed time = 0h 0m 0.064s
+   Placement Phase 2: CPU time = 0h 0m 0.001s, Elapsed time = 0h 0m 0.001s
+   Placement Phase 3: CPU time = 0h 0m 0.701s, Elapsed time = 0h 0m 0.701s
+   Total Placement: CPU time = 0h 0m 0.77s, Elapsed time = 0h 0m 0.77s
 Running routing:
    Routing Phase 0: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s
-   Routing Phase 1: CPU time = 0h 0m 0.153s, Elapsed time = 0h 0m 0.151s
-   Routing Phase 2: CPU time = 0h 0m 0.075s, Elapsed time = 0h 0m 0.076s
-   Total Routing: CPU time = 0h 0m 0.228s, Elapsed time = 0h 0m 0.227s
+   Routing Phase 1: CPU time = 0h 0m 0.144s, Elapsed time = 0h 0m 0.143s
+   Routing Phase 2: CPU time = 0h 0m 0.086s, Elapsed time = 0h 0m 0.086s
+   Total Routing: CPU time = 0h 0m 0.23s, Elapsed time = 0h 0m 0.229s
 Generate output files:
    CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
 </td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s, Peak memory usage = 216MB</td>
+<td>CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s, Peak memory usage = 198MB</td>
 </tr>
 </table>
 <br/>
